Fix footer spacing - WIP

--- a/src/styles/pomegranate/_footer.scss
+++ b/src/styles/pomegranate/_footer.scss
@@ -16,7 +16,7 @@
   }
 
   .footer-wrapper {
-    max-width: $grid-column * 3 + $grid-gap * 2;
+    max-width: $grid-column * 2 + $grid-gap;
     margin: 0 auto;
   }
 
